@@ -3,4 +3,5 @@
 %
 % Running LilyPond on this file generates the documentation
 %
+#(ly-set-parse-protect #f)
 #(load-from-path "generate-documentation.scm")
